<resources>
    <string name="app_name">VideoMeeting</string>
    <string name="welcome_to_n_online_classroom">Welcome To \n ONLINE-CLASSROOM</string>
    <string name="sign_in_to_your_account">Sign in to Your Account</string>
    <string name="e_mail">E-mail</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_your_student_account_ready">We need few details to get your student account ready</string>
    <string name="we_need_a_few_details_to_get_your_teacher_account_ready">We need few details to get your teacher account ready</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string name="xxxxxxxxxv_or_xxxxxxxxxxxx">xxxxxxxxxV or xxxxxxxxxxxx</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="online_classroom">ONLINE - CLASSROOM</string>
    <string name="video_meeting">VIDEO MEETING</string>
    <string name="lecture_notes">Lecture notes</string>
    <string name="attendance_history">Attendance History</string>
    <string name="welcome">WELCOME</string>
    <string name="teacher">TEACHER</string>
    <string name="student">STUDENT</string>
    <string name="select_your_user_level">Select your user level</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="e_classroom_n_student_tracker"><![CDATA[E - Classroom & \n Student Tracker]]></string>
    <string name="change_user">CHANGE USER</string>
    <string name="sign_in_to_student_account">Sign in to Student Account</string>
    <string name="sign_in_to_teacher_account">Sign in to Teacher Account</string>
    <string name="create_online_meeting">Create Online Meeting</string>
    <string name="view_attendance_history">View Attendance History</string>
    <string name="user_type_teacher">User Type - Teacher</string>
    <string name="join_video_meeting">Join Video Meeting</string>
    <string name="user_type_student">User Type - Student</string>
    <string name="upload_lecture_notes">Upload Lecture Notes</string>
    <string name="view_uploaded_lecture_notes">View Uploaded Lecture Notes</string>
    <string name="select_file_from_storage">Select file from storage</string>
    <string name="subject_code">Subject Code</string>
    <string name="note_password">Note Password</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="pdf_name">PDF Name</string>
    <string name="enter_note_code_or_subject_code">Enter Note Code or Subject Code</string>
    <string name="note_code">Note Code</string>
    <string name="search">SEARCH</string>
    <string name="note_code_subject_code">Note Code/ Subject Code</string>
    <string name="note_name">Note Name -</string>
    <string name="stack">Stack</string>
    <string name="subject_code_a">Subject Code -</string>
    <string name="note_code_a">Note Code -</string>
    <string name="unlock_pdf">Unlock PDF</string>
    <string name="room_id">Room ID</string>
    <string name="join">Join</string>
    <string name="logout_time">Logout Time</string>
    <string name="login_time">Login Time</string>

</resources>