<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
     android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_code_a"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/sf_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subjectCode"
                android:layout_marginStart="8dp"
                android:text="@string/stack"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/sf_medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_code_a"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/sf_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noteCode"
                android:layout_marginStart="8dp"
                android:text="@string/stack"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/sf_medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/sf_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noteName"
                android:layout_marginStart="8dp"
                android:text="@string/stack"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/sf_medium"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>