<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activities.SignUpStudentActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/bar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back_ios"
            app:tint="@color/colorTextIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/sf_bold"
            android:textAllCaps="true"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/sf_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/we_need_a_few_details_to_get_your_student_account_ready"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_15ssp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_15sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:fontFamily="@font/sf_regular"
                        android:includeFontPadding="false"
                        android:text="@string/first_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_5sdp">
                        <EditText
                            android:id="@+id/inputFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@null"
                            android:fontFamily="@font/sf_regular"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="text"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHintText"
                            android:textSize="@dimen/_13ssp"/>
                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:fontFamily="@font/sf_regular"
                        android:includeFontPadding="false"
                        android:text="@string/last_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_5sdp">
                        <EditText
                            android:id="@+id/inputLastName"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@null"
                            android:fontFamily="@font/sf_regular"
                            android:hint="@string/last_name"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="text"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHintText"
                            android:textSize="@dimen/_13ssp"/>
                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:fontFamily="@font/sf_regular"
                        android:includeFontPadding="false"
                        android:text="@string/id_number"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_5sdp">
                        <EditText
                            android:id="@+id/inputIDNumber"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@null"
                            android:fontFamily="@font/sf_regular"
                            android:hint="@string/xxxxxxxxxv_or_xxxxxxxxxxxx"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="text"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHintText"
                            android:textSize="@dimen/_13ssp"/>
                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:fontFamily="@font/sf_regular"
                        android:includeFontPadding="false"
                        android:text="@string/e_mail"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_5sdp">
                        <EditText
                            android:id="@+id/inputEmail"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@null"
                            android:fontFamily="@font/sf_regular"
                            android:hint="@string/you_example_com"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHintText"
                            android:textSize="@dimen/_13ssp"/>
                    </FrameLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:fontFamily="@font/sf_regular"
                        android:includeFontPadding="false"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_5sdp">
                        <EditText
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@null"
                            android:fontFamily="@font/sf_regular"
                            android:hint="@string/password_hint"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="textPassword"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHintText"
                            android:textSize="@dimen/_13ssp"/>
                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/sf_regular"
                        android:includeFontPadding="false"
                        android:text="@string/confirm_password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_5sdp">

                        <EditText
                            android:id="@+id/inputConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@null"
                            android:fontFamily="@font/sf_regular"
                            android:hint="@string/password_hint"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="textPassword"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHintText"
                            android:textSize="@dimen/_13ssp"/>
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/_10sdp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonSignUp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:layout_marginEnd="@dimen/_30sdp"
                            android:fontFamily="@font/sf_bold"
                            android:includeFontPadding="false"
                            android:text="@string/sign_up"
                            android:textColor="@color/colorTextIcons"
                            android:textSize="@dimen/_13ssp"
                            app:layout_constraintTop_toBottomOf="@id/cardSignIn"/>

                        <ProgressBar
                            android:id="@+id/signUpProgressBar"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:visibility="invisible"/>

                    </FrameLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_regular"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:id="@+id/textSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:padding="@dimen/_6sdp"
                        android:text="@string/sign_in"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>